--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pug": "^2.0.4"
   },
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2"
   }
