--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "sass": "node-sass styles/style.scss public/style.css -w --output-style compressed"
+    "start": "concurrently --kill-others \"npm run watchify\" \"npm run sass\" \"nodemon app.js\"",
+    "sass": "node-sass styles/style.scss public/style.css -w --output-style compressed",
+    "watchify": "watchify scripts/test.js -o public/script.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,6 @@
     "pug": "^2.0.4"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2"
   }
